Bug 388700 - Investment Transaction imported as buy, when change to reinvest dividend get missing assignment error
Summary: Investment Transaction imported as buy, when change to reinvest dividend get ...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-08 21:22 UTC by Joe Byers
Modified: 2019-08-29 00:35 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.2,5.0.0
Sentry Crash Report:


Attachments
OFX test file. (3.54 KB, application/vnd.intu.qfx)
2018-01-08 21:22 UTC, Joe Byers
Details
attachment-24524-0.html (1.91 KB, text/html)
2018-01-15 23:51 UTC, Joe Byers
Details
attachment-11603-0.html (2.07 KB, text/html)
2018-01-17 15:54 UTC, Joe Byers
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Joe Byers 2018-01-08 21:22:27 UTC
Created attachment 109743 [details]
OFX test file.

I imported an OFX file of transactions.  These were dividends and capital gains, but the financial service created them as security buys.  I tried to change the transaction to Reinvest Dividend.  Upon saving, The yield sign appeared giving me a missing assignment error.  The transaction still shows up in the linked brokerage account and can't be removed.  The only solution is to manually enter the transaction.  

This is similar to bug 358129 that I submitted last year. 

I have attached an OFX file you can use to test with.  Create an investment account with a linked brokerage account.
Comment 1 Ralf Habacker 2018-01-15 20:40:12 UTC
Just to be sure - I 

1. created an investment account named invest
2. In the wizard I enabled creating of a security account which has been named 'invest (billing)'
3. I imported the appended qfx file into account 'invest'
4. Then I opened the ledger of  account 'invest' and saw 4 transactions 
5. I double clicked on the second transaction (having note 'dividends', which I think you are refering to) and changed the activity to 'Reinvest Dividend'

Then I saw that I cannot save this transaction - can you confirm or are I am doing something different ?
Comment 2 Joe Byers 2018-01-15 23:51:45 UTC
Created attachment 109896 [details]
attachment-24524-0.html

On 01/15/2018 03:40 PM, Ralf Habacker wrote:
> https://bugs.kde.org/show_bug.cgi?id=388700
>
> Ralf Habacker <ralf.habacker@freenet.de> changed:
>
>             What    |Removed                     |Added
> ----------------------------------------------------------------------------
>                   CC|                            |ralf.habacker@freenet.de
>
> --- Comment #1 from Ralf Habacker <ralf.habacker@freenet.de> ---
> Just to be sure - I
>
> 1. created an investment account named invest
> 2. In the wizard I enabled creating of a security account which has been named
> 'invest (billing)'
> 3. I imported the appended qfx file into account 'invest'
> 4. Then I opened the ledger of  account 'invest' and saw 4 transactions
> 5. I double clicked on the second transaction (having note 'dividends', which I
> think you are refering to) and changed the activity to 'Reinvest Dividend'
>
> Then I saw that I cannot save this transaction - can you confirm or are I am
> doing something different ?
>
Ralf,


1-4is what I did.  5 is new.  Did you enter the income category for 
dividend income or interest income, if not, then it will not save.

Joe
Comment 3 Ralf Habacker 2018-01-16 23:31:16 UTC
Git commit 6ae7e1844e0511636e19bb6bb7f36de6242fcb61 by Ralf Habacker.
Committed on 16/01/2018 at 23:30.
Pushed by habacker into branch '4.8'.

Fix 'missing assignment' error after changing invest transaction to reinvest

The problem was caused by the fact that assetAccountSplit was not disabled
from the previous activity type.
FIXED-IN:4.8.2

M  +1    -0    kmymoney/dialogs/investactivities.cpp

https://commits.kde.org/kmymoney/6ae7e1844e0511636e19bb6bb7f36de6242fcb61
Comment 4 Joe Byers 2018-01-17 15:54:31 UTC
Created attachment 109940 [details]
attachment-11603-0.html

On 01/16/2018 06:31 PM, Ralf Habacker wrote:
> https://bugs.kde.org/show_bug.cgi?id=388700
>
> Ralf Habacker <ralf.habacker@freenet.de> changed:
>
>             What    |Removed                     |Added
> ----------------------------------------------------------------------------
>     Version Fixed In|                            |4.8.2
>           Resolution|---                         |FIXED
>               Status|UNCONFIRMED                 |RESOLVED
>        Latest Commit|                            |https://commits.kde.org/kmy
>                     |                            |money/6ae7e1844e0511636e19b
>                     |                            |b6bb7f36de6242fcb61
>
> --- Comment #3 from Ralf Habacker <ralf.habacker@freenet.de> ---
> Git commit 6ae7e1844e0511636e19bb6bb7f36de6242fcb61 by Ralf Habacker.
> Committed on 16/01/2018 at 23:30.
> Pushed by habacker into branch '4.8'.
>
> Fix 'missing assignment' error after changing invest transaction to reinvest
>
> The problem was caused by the fact that assetAccountSplit was not disabled
> from the previous activity type.
> FIXED-IN:4.8.2
>
> M  +1    -0    kmymoney/dialogs/investactivities.cpp
>
> https://commits.kde.org/kmymoney/6ae7e1844e0511636e19bb6bb7f36de6242fcb61
>
Awesome!!!!!!!!!!!!:)
Comment 5 Thomas Baumgart 2018-01-20 09:25:50 UTC
Git commit 38f19da88c783426654364ec420afbe19874d9d0 by Thomas Baumgart.
Committed on 20/01/2018 at 09:25.
Pushed by tbaumgart into branch '5.0'.

Fix 'missing assignment' error after changing invest transaction to reinvest

The problem was caused by the fact that assetAccountSplit was not
disabled from the previous activity type.

(cherry picked from commit 6ae7e1844e0511636e19bb6bb7f36de6242fcb61)

M  +1    -0    kmymoney/dialogs/investactivities.cpp

https://commits.kde.org/kmymoney/38f19da88c783426654364ec420afbe19874d9d0