Fix 'missing assignment' error after changing invest transaction to reinvest

The problem was caused by the fact that assetAccountSplit was not disabled
from the previous activity type.

BUG:388700
FIXED-IN:4.8.2